--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -6,11 +6,24 @@ H5PIntegration.l10n = {}
 </script>
 
 <script src="/jquery.js"></script>
+
+
 <script src="/h5p.js"></script>
+<script src="/h5p-content-type.js"></script>
 <script src="/h5p-event-dispatcher.js"></script>
+<script src="/h5p-x-api-event.js"></script>
+<script src="/h5p-x-api.js"></script>
+<script src="/soundjs-0.6.2.min.js"></script>
+<script src="/drop.min.js"></script>
+<script src="/joubelui.js"></script>
+<script src="/questions.js"></script>
+<script src="/singlechoiceset.js"></script>
+<script src="/summary.js"></script>
+
 <script src="/three.min.js"></script>
 
 <script src="/three-sixty.js"></script>
+
 <!--<script src="static/three-image.js"></script> -->
 <script>
 H5P.getPath = function(path, context){console.log(path);return path;};
